Eureka注册中心单机集群

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>SpringCloud-provider-8001</module>
         <module>SpringCloud-consumer-8080</module>
         <module>SpringCloud-eureka-7001</module>
+        <module>SpringCloud-eureka-7002</module>
+        <module>SpringCloud-eureka-7003</module>
     </modules>
 
     <!--    定义版本号-->
