--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>SpringCloud-eureka-7001</module>
         <module>SpringCloud-eureka-7002</module>
         <module>SpringCloud-eureka-7003</module>
+        <module>SpringCloud-provider-8002</module>
+        <module>SpringCloud-provider-8003</module>
     </modules>
 
     <!--    定义版本号-->
