利用Feign实现负载均衡

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>SpringCloud-eureka-7003</module>
         <module>SpringCloud-provider-8002</module>
         <module>SpringCloud-provider-8003</module>
+        <module>SpringCloud-consumer-feign-8080</module>
     </modules>
 
     <!--    定义版本号-->
