--- a/SpringCloud-API/pom.xml
+++ b/SpringCloud-API/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--        添加feign的依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
