--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>SpringCloud-provider-8003</module>
         <module>SpringCloud-consumer-feign-8080</module>
         <module>SpringCloud-provider-hystrix-8001</module>
+        <module>SpringCloud-consumer-hystrix-dashboard-8080</module>
     </modules>
 
     <!--    定义版本号-->
