--- a/SpringCloud-API/pom.xml
+++ b/SpringCloud-API/pom.xml
@@ -31,6 +31,13 @@
             <version>1.4.6.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
