--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>SpringCloud-provider-hystrix-8001</module>
         <module>SpringCloud-consumer-hystrix-dashboard-8080</module>
         <module>SpringCloud-zuul-9981</module>
+        <module>SpringCloud-config-server-3366</module>
     </modules>
 
     <!--    定义版本号-->
