--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>SpringCloud-zuul-9981</module>
         <module>SpringCloud-config-server-3366</module>
         <module>SpringCloud-config-client-3355</module>
+        <module>SpringCloud-config-eureka-7001</module>
+        <module>SpringCloud-config-provider-8001</module>
     </modules>
 
     <!--    定义版本号-->
