--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>cloud-alibaba-payment-9001</module>
         <module>cloud-alibaba-payment-9002</module>
         <module>cloud-alibaba-consumer-9083</module>
+        <module>cloud-alibaba-client-3377</module>
     </modules>
     <dependencies>
         <dependency>
